# unitree_mpc

./: .gitignore  LICENSE  README.md  README_zh.md
unitree_mujoco/: readme.md
wb_humanoid_mpc/: .gitignore  (+5 more)
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/: CMakeLists.txt  package.xml
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/include/humanoid_centroidal_mpc/: CentroidalMpcInterface.h
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/: CentroidalMpcInterface.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/command/: CentroidalMpcTargetTrajectoriesCalculator.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/constraint/: JointMimicKinematicConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroVelocityConstraintCppAd.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/cost/: CentroidalMpcEndEffectorFootCost.cpp  ICPCost.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/dynamics/: CentroidalDynamicsAD.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/src/initialization/: CentroidalWeightCompInitializer.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc/test/: testCentroidalConversions.cpp  testDynamicsHelperFunctions.cpp  testPinocchioFrameConversions.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc_ros2/: CMakeLists.txt  package.xml  setup.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc_ros2/src/: CentroidalMpcDummySimNode.cpp  CentroidalMpcKeyboardPoseCommandNode.cpp  CentroidalMpcRealTestNode.cpp  CentroidalMpcSqpNode.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc_ros2/src/gains/: GainsReceiver.cpp  GainsUpdaterUtils.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_centroidal_mpc_ros2/test/: testHumanoidVisualizer.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/: CMakeLists.txt  package.xml
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/config/command/: gait.info  gait.info.bak
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/include/humanoid_common_mpc/: HumanoidCostConstraintFactory.h  HumanoidPreComputation.h
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/: HumanoidCostConstraintFactory.cpp  HumanoidPreComputation.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/command/: TargetTrajectoriesCalculatorBase.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/common/: ModelSettings.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/constraint/: ContactMomentXYConstraintCppAd.cpp  EndEffectorKinematicsLinearVelConstraint.cpp  EndEffectorKinematicsTwistConstraint.cpp  FootCollisionConstraint.cpp  FrictionForceConeConstraint.cpp  JointLimitsSoftConstraint.cpp  ZeroWrenchConstraint.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/contact/: ContactCenterPoint.cpp  ContactPolygon.cpp  ContactRectangle.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/cost/: EndEffectorKinematicCostHelpers.cpp  EndEffectorKinematicsQuadraticCost.cpp  ExternalTorqueQuadraticCostAD.cpp  StateInputQuadraticCost.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/gait/: Gait.cpp  GaitSchedule.cpp  GaitScheduleUpdater.cpp  ModeSequenceTemplate.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/initialization/: WeightCompInitializer.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/pinocchio_model/: DynamicsHelperFunctions.cpp  createPinocchioModel.cpp  pinocchioUtils.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/src/reference_manager/: ProceduralMpcMotionManager.cpp  SwitchedModelReferenceManager.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc/test/: testEndEffectorKinematicsCostElement.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_pyutils/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_pyutils/humanoid_common_mpc_pyutils/: __init__.py  mpc_observation_inspector.py  mpc_observation_logger.py  trajectory_jump_plot.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_pyutils/launch/: mpc_observation_logger.launch.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_pyutils/test/: test_xbox_controller.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_ros2/: CMakeLists.txt  package.xml  setup.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_ros2/humanoid_common_mpc_ros2/: __init__.py  mpc_launch_config.py  mpc_real_test_launch_config.py
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_ros2/rviz/: humanoid.rviz
wb_humanoid_mpc/humanoid_nmpc/humanoid_common_mpc_ros2/src/: HumanoidGaitCommandNode.cpp  MpcKeyboardVelocityCommandNode.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_mpc_msgs/: CMakeLists.txt  package.xml
wb_humanoid_mpc/humanoid_nmpc/humanoid_mpc_msgs/msg/: WalkingVelocityCommand.idl
wb_humanoid_mpc/humanoid_nmpc/humanoid_wb_mpc/: CMakeLists.txt  package.xml
wb_humanoid_mpc/humanoid_nmpc/humanoid_wb_mpc/src/: WBMpcInterface.cpp  WBMpcPreComputation.cpp
wb_humanoid_mpc/humanoid_nmpc/humanoid_wb_mpc_ros2/: CMakeLists.txt  package.xml
wb_humanoid_mpc/humanoid_nmpc/humanoid_wb_mpc_ros2/src/: WBMpcDummySimNode.cpp  WBMpcPoseCommandNode.cpp  WBMpcRealTestNode.cpp  WBMpcSqpNode.cpp
wb_humanoid_mpc/humanoid_nmpc/remote_control/: package.xml  setup.cfg  setup.py
wb_humanoid_mpc/humanoid_nmpc/remote_control/launch/: xbox_velocity_publisher.launch.py
wb_humanoid_mpc/humanoid_nmpc/remote_control/remote_control/: __init__.py  base_velocity_controller_gui.py  keyboard_walking_command_publisher.py  xbox_controller_interface.py  xbox_walking_command_publisher.py
wb_humanoid_mpc/humanoid_nmpc/remote_control/test/: test_xbox_controller.py
wb_humanoid_mpc/lib/mujoco_vendor/: CMakeLists.txt  README.md  package.xml
wb_humanoid_mpc/robot_models/unitree_g1/g1_centroidal_mpc/: CMakeLists.txt  package.xml
wb_humanoid_mpc/robot_models/unitree_g1/g1_description/: CMakeLists.txt  package.xml
wb_humanoid_mpc/robot_models/unitree_g1/g1_hardware_interface/: CMakeLists.txt  package.xml
wb_humanoid_mpc/robot_models/unitree_g1/g1_wb_mpc/: CMakeLists.txt  package.xml
(+164 files in other folders)
