<?xml version="1.0"?>
<package format="3">
  <name>humanoid_common_mpc_pyutils</name>
  <version>0.0.0</version>
  <description>Contains python functionality for the mpc</description>

  <maintainer email="manuel.galliker@gmx.ch">Manuel Yves Galliker</maintainer>

  <license>BSD</license>

  <depend>rclcpp</depend>

  <depend>ocs2_ros2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>


</package>