<?xml version="1.0"?>
<package format="3">
  <name>humanoid_common_mpc_ros2</name>
  <version>0.0.0</version>
  <description>Ros2 interface for the humanoid common mpc</description>

  <maintainer email="manuel.galliker@1x.tech">Manuel Yves Galliker</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ocs2_ros2_interfaces</depend>
  <depend>ocs2_ros2_msgs</depend>
  <depend>ocs2_sqp</depend>
  <depend>humanoid_common_mpc</depend>
  <depend>remote_control</depend>
  <depend>humanoid_mpc_msgs</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>humanoid_common_mpc_pyutils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
