<?xml version="1.0"?>
<package format="3">
  <name>humanoid_wb_mpc_ros2</name>
  <version>0.0.0</version>
  <description>Ros2 interface for the humanoid wb mpc</description>

  <maintainer email="manuel.galliker@1x.tech">Manuel Yves Galliker</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ocs2_ros2_interfaces</depend>
  <depend>ocs2_ros2_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>humanoid_wb_mpc</depend>
  <depend>humanoid_common_mpc_ros2</depend>
  <depend>g1_hardware_interface</depend>
  <depend>ocs2_pinocchio_interface</depend>



  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <!-- <test_depend>ament_cmake_cpplint</test_depend> -->
  <test_depend>ament_cmake_flake8</test_depend>
  <!-- <test_depend>ament_cmake_pep257</test_depend> -->
  <test_depend>ament_cmake_xmllint</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
