<?xml version="1.0"?>
<package format="3">
  <name>remote_control</name>
  <version>0.0.0</version>
  <description>Contains functionality to remote control the humanoid MPCs</description>

  <maintainer email="manuel.galliker@gmx.ch">Manuel Yves Galliker</maintainer>

  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>humanoid_mpc_msgs</depend>

  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>


</package>