<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mujoco_vendor</name>
    <version>1.0.0</version>
    <description>Implot vendor package</description>
    <maintainer email="manuel.galliker@1x.tech">Manuel Yves Galliker</maintainer>
    <license>1X INTERNAL</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>